--- a/css/page.css
+++ b/css/page.css
@@ -91,7 +91,7 @@ h3 {
     left: 85%;
 }
 .focus {
-    top: 47.5vh;
+    top: 45%;
     left: 150px;
     font-size: 4rem;
     font-weight: 700;
@@ -101,6 +101,7 @@ h3 {
     line-height: 1;
     position: relative;
     width: 259px;
+    display: flex;
 }
 .focus:before {
     content: "Equity";
