--- a/css/page.css
+++ b/css/page.css
@@ -65,7 +65,7 @@ h3 {
 /* The first step */
 #masterhead {
     width: calc(100vw - 23px);
-}
+}   
 .masthead  {
     background: -webkit-gradient(linear, left top, left bottom, from(rgba(8, 12, 22, .8)), to(rgba(8, 12, 22, .8))), url(../img/mast.jpeg) !important;
     background: linear-gradient(to bottom, rgba(8, 12, 22, .8) 0, rgba(8, 12, 22, .8) 100%), url(../img/mast.jpeg) !important;
@@ -76,10 +76,18 @@ h3 {
     width: 103%;
     z-index: 10;
 }
-.mast {
-    margin-top: 300px;
-    width: 40%;
+.mast-title {
     text-align: start;
+    position: absolute;
+    display: flex;
+    top: 25%;
+}
+.mast-text {
+    text-align: start;
+    position: absolute;
+    display: flex;
+    top: 55%;
+    width: 40%;
 }
 .logo-wrapper {
     position: absolute;
@@ -91,17 +99,17 @@ h3 {
     left: 85%;
 }
 .focus {
-    top: 45%;
-    left: 150px;
+    top: 40%;
+    left: 100px;
     font-size: 4rem;
     font-weight: 700;
     text-transform: uppercase;
     color: #B2A268;
     letter-spacing: 0.2rem;
     line-height: 1;
-    position: relative;
     width: 259px;
     display: flex;
+    position: absolute;
 }
 .focus:before {
     content: "Equity";
