--- a/css/accessibility.css
+++ b/css/accessibility.css
@@ -31,12 +31,13 @@
   #acc-wrapper {
     background: rgba(0,0,0,0.5);
     position: absolute;
+    height: 170px;
     left: 33%;
     transform: translateX(50%);
     top: 150px;
     bottom: 60%;
     padding: 6px;
-    width: 350px;
+    width: 330px;
     z-index: 3;
     border-radius: 20px;
     display: flex;
@@ -44,7 +45,7 @@
     justify-content: space-between;
   }
   #overallSummary {
-    height: 10%;
+    height: 250px;
     flex-direction: column;
     justify-content: space-around;
   }
@@ -63,7 +64,7 @@
     font-size: 12px;
     font-weight: 200;
     color: white;
-    height: 20%;
+    height: 5px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -72,11 +73,11 @@
     align-items: center;
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 25px;
+    padding-top: 10px;
     font-size: 36px;
     font-weight: 600;
     color: white;
-    height: 40%;
+    height: 40px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -84,7 +85,6 @@
   .overallDescript {
     align-items: center;
     font-size: 16px;
-    margin-top: 5%;
     margin-left: 4px;
     margin-right: 4px;
     font-weight: 200;
