--- a/css/page.css
+++ b/css/page.css
@@ -17,8 +17,18 @@ section {
 	position: relative;
 }
 
+a:link, a:visited {
+    color: white;
+    text-decoration: none;
+  }
+  
+  a:hover, a:active {
+    color: #808080;
+  }
+
 h1	{
 	position: absolute;
+    letter-spacing: 0.2rem;
     margin-left: 100px;
 	top: 20px;
 	text-align: left;
@@ -46,18 +56,81 @@ h2 {
 
 h3 {
     position: relative;
-    margin-left: 90px;
+    margin-left: 100px;
 	top: 180px;
 	transform: translateY(-50%);
 	text-align: left;
 	color: rgba(255, 255, 255, .5) !important;
 	width: 100%;
-    text-align: start;
+    text-align: justify;
     line-height: 1.5em;
 	left: 0;
 	font-size: calc(1rem + 0.2vw);
     font-weight: 300;
 }
+
+h4 {
+    padding-left: 90px;
+    padding-top: 40px;
+    position: relative;
+	text-align: start;
+	color: rgba(255, 255, 255, 1) !important;
+	font-size: calc(1rem + 1vw);
+    font-weight: 300;
+}
+
+h5 {
+    position: relative;
+    padding-left: 90px;
+	text-align: start;
+	color: rgba(255, 255, 255, 1) !important;
+	font-size: calc(1rem + 0.2vw);
+    font-weight: 200;
+    text-align:justify;
+}
+
+#wrapper-end {
+    width: 100%;
+    position: absolute;
+    height: 100vh;
+}
+#content-description {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    width: calc(50vw);
+    height: 100%;
+}
+#content-team {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    width: calc(50vw);
+    height: 100%;
+    right: 0px;
+}
+.team-member {
+    margin-top: 20px;
+    color: white;
+    text-align: left;
+    list-style-type: none;
+    margin-left: 50px;
+    font-size: calc(1rem + 0.2vw);
+    font-weight: 300;
+    text-align:justify;
+}
+.team-info {
+    color: white;
+    text-align: left;
+    list-style-type: none;
+    margin-left: 50px;
+    font-size: calc(1rem - 0.1vw);
+    font-weight: 100;
+    text-align:justify;
+    font-style: italic;
+}
+
 #equality_desc {
     top: 210px;
 }
@@ -82,6 +155,16 @@ h3 {
     display: flex;
     top: 25%;
 }
+.mast-subtitle {
+    letter-spacing: 0.2rem;
+    text-align: start;
+    position: absolute;
+    display: flex;
+    top: 35%;
+	color: white;
+    line-height: 1.5em;
+	font-size: calc(1rem + 1.2vw);
+}
 .mast-text {
     text-align: start;
     position: absolute;
@@ -99,28 +182,30 @@ h3 {
     left: 85%;
 }
 .focus {
-    top: 40%;
-    left: 100px;
-    font-size: 4rem;
-    font-weight: 700;
+    font-family: "hepta Slab";
+    top: 253px;
+    left: 610px;
+    font-size: 3.4rem;
+    font-weight: 600;
     text-transform: uppercase;
-    color: #B2A268;
-    letter-spacing: 0.2rem;
+    color: white;
+    letter-spacing: 0.4rem;
     line-height: 1;
-    width: 259px;
+    width: 260px;
     display: flex;
     position: absolute;
 }
 .focus:before {
-    content: "Equity";
-    filter: blur(3px);
+    content: "Justice";
+    filter: blur(4px);
 }
 .focus:after {
     content: "";
+    color: #B2A268;
     position: absolute;
     width: 50px;
     height: calc(100% + 8px);
-    top: -4px;
+    top: -7px;
     left: 0;
     border-top: 2px solid;
     border-bottom: 2px solid;
@@ -129,6 +214,7 @@ h3 {
 }
 .focus--mask {
     overflow: hidden;
+    color: #B2A268;
     position: absolute;
     width: 50px;
     height: 100%;
