--- a/css/equity.css
+++ b/css/equity.css
@@ -31,7 +31,7 @@
 #filter-wrapper-Equ {
   position: absolute;
   left: 20px;
-  top: 130px;
+  top: 110px;
   font-weight: 500;
   padding: 10px;
   display: flex;
@@ -44,38 +44,38 @@
 .sessionEqu_demand {
   width: 205px;
   color: white;
-  font-size: 14px;
+  font-size: 16px;
 }
 .sessionEqu_unit {
   width: 150px;
   color: white;
-  font-size: 14px;
+  font-size: 16px;
 }
 .sessionEqu_trip {
   width: 165px;
   color: white;
-  font-size: 14px;
+  font-size: 16px;
 }
 .sessionEqu_meas {
   color: white;
-  font-size: 14px;
+  font-size: 16px;
 }
-.sliderContainer {
+.sliderContainerEqu {
   color: white;
-  margin-top: 10px;
+  margin-top: 4px;
 }
 
 .sliderEquContentAbsolute {
   position: absolute;
   width: 230px;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
   color: white;
 }
 .sliderEquContentRelative {
   position: absolute;
   width: 230px;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
   color: white;
 }
@@ -106,7 +106,7 @@
   position: absolute;
   height: 40%;
   width: 230px;
-  bottom: 18px;
+  bottom: 10px;
   left: 10px;
   font-weight: 500;
   padding: 10px;
@@ -127,7 +127,7 @@
   position: absolute;
   left: 33%;
   transform: translateX(50%);
-  top: 160px;
+  top: 135px;
   bottom: 4%;
   padding: 6px;
   width: 360px;
@@ -138,17 +138,17 @@
   justify-content: space-between;
 }
 #gapSummary {
-  height: 10%;
+  height: 12%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 #scatterPlot {
-  height: 33%;
+  height: 32%;
 }
 #giniSummary {
   height: 20%;
-  margin-top: 10px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -158,18 +158,18 @@
 }
 #gapTitle {
   align-items: center;
-  font-size: 15px;
-  font-weight: 600;
+  font-size: 20px;
+  font-weight: 300;
   color: white;
   text-align: center;
-  margin-bottom: -10px;
+  margin-bottom: -20px;
 }
 #gapSmallText {
   align-items: center;
   padding-left: 15px;
   padding-right: 15px;
-  font-size: 12px;
-  font-weight: 200;
+  font-size: 15px;
+  font-weight: 500;
   color: white;
   height: 20%;
   display: flex;
@@ -180,7 +180,7 @@
   align-items: center;
   padding-left: 15px;
   padding-right: 15px;
-  font-size: 12px;
+  font-size: 30px;
   font-weight: 600;
   color: white;
   height: 40%;
@@ -190,40 +190,42 @@
 }
 #giniTitle {
   align-items: center;
-  font-size: 15px;
-  font-weight: 600;
+  font-size: 20px;
+  font-weight: 300;
   color: white;
   text-align: center;
   margin-top: 0px;
-  margin-bottom: -10px;
+  margin-bottom: -20px;
 }
 #giniSmallText {
   align-items: center;
   padding-left: 15px;
   padding-right: 15px;
-  font-size: 12px;
-  font-weight: 200;
+  font-size: 15px;
+  font-weight: 500;
   color: white;
   height: 15%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-#giniValue-wrapper {
-  height: 60%; 
+#giniValue-wrapper { 
+  height: 65%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-left: 5px;
   margin-right: 5px;
+  margin-bottom: 30px;
+  margin-top: 5px;
 }
 #giniValue {
   padding-left: 10px;
   padding-right: 10px;
-  margin-top: -10px;
-  font-size: 12px;
+  font-size: 30px;
   font-weight: 600;
   color: white;
+  display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
