--- a/css/page.css
+++ b/css/page.css
@@ -30,28 +30,29 @@ h1	{
 	position: absolute;
     letter-spacing: 0.2rem;
     margin-left: 100px;
-	top: 20px;
+	top: -10px;
 	text-align: left;
 	color: white;
     line-height: 1.5em;
 	width: 53%;
 	left: 0;
-	font-size: calc(1rem + 2vw);
+	font-weight: 600;
+    font-size: calc(1rem + 1.5vw);
 }
 
 h2 {
     position: absolute;
     margin-top: 50px;
     margin-left: 100px;
-	top: 280px;
+	top: 250px;
 	transform: translateY(-50%);
 	text-align: start;
-	color: rgba(255, 255, 255, .5) !important;
+	color: rgba(255, 255, 255) !important;
 	width: 40%;
     line-height: 1.5em;
 	left: 0;
 	font-size: calc(1rem + 0.3vw);
-    font-weight: 500;
+    font-weight: 300;
 }
 
 h3 {
@@ -60,7 +61,7 @@ h3 {
 	top: 180px;
 	transform: translateY(-50%);
 	text-align: left;
-	color: rgba(255, 255, 255, .5) !important;
+	color: rgba(255, 255, 255) !important;
 	width: 100%;
     text-align: justify;
     line-height: 1.5em;
@@ -99,7 +100,7 @@ h5 {
     top: 0px;
     bottom: 0px;
     left: 0px;
-    width: calc(50vw);
+    width: calc(43vw);
     height: 100%;
 }
 #content-team {
@@ -125,10 +126,10 @@ h5 {
     text-align: left;
     list-style-type: none;
     margin-left: 50px;
+    margin-top: 5px;
     font-size: calc(1rem - 0.1vw);
     font-weight: 100;
     text-align:justify;
-    font-style: italic;
 }
 
 #equality_desc {
@@ -169,19 +170,21 @@ h5 {
     text-align: start;
     position: absolute;
     display: flex;
-    top: 55%;
+    top: 52%;
     width: 40%;
 }
 .logo-wrapper {
     position: absolute;
-    top: 20px;
+    top: 25px;
     height: 50px;
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
-    left: 85%;
+    left:78%;
 }
-.focus {
+/* .focus {
+    position: relative;
+    float: left;
     font-family: "hepta Slab";
     top: 253px;
     left: 610px;
@@ -192,8 +195,6 @@ h5 {
     letter-spacing: 0.4rem;
     line-height: 1;
     width: 260px;
-    display: flex;
-    position: absolute;
 }
 .focus:before {
     content: "Justice";
@@ -259,7 +260,7 @@ h5 {
     100% {
         transform: translateX(-259px);
     }
-}
+} */
 
 #vis {
     display: inline-block;
@@ -284,9 +285,9 @@ h5 {
     z-index: 1;
     color: white;
     font-family: "Hepta slab";
-    font-size: calc(1rem + 2vw);
-    font-weight: bold;
-	top: -4px;
+    font-size: calc(1rem + 1.5vw);
+    font-weight: 600;
+	top: -24px;
 	text-align: left;
 	color: white;
 	width: 60%;
@@ -297,7 +298,7 @@ h5 {
     text-align: center;
     left: calc(25%);
     transform: translateX(-50%);
-    top: 100px;
+    top: 80px;
     height: 50px;
     color: white;
     font-size: 22px;
@@ -310,7 +311,7 @@ h5 {
     text-align: center;
     left: 75%;
     transform: translateX(-50%);
-    top: 100px;
+    top: 80px;
     height: 50px;
     color: white;
     font-size: 22px;
@@ -342,14 +343,14 @@ label {
     position: relative;
     cursor: pointer;
     padding-right: 18px;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 300;
     margin-bottom: 7px;
 }
 label-drop {
     position: relative;
     left: -30px;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 300;
 }
 label:nth-child(1) {
@@ -381,7 +382,7 @@ label::after {
     width: 9px;
     height: 9px;
     left: 2px;
-    top: 4px;
+    top: 6px;
     margin: -2px 10px;
     margin-left: 0;
     border-radius: 50%;
@@ -394,7 +395,7 @@ label#filter_rel::after {
     width: 9px;
     height: 9px;
     left: 2.2px;
-    top: 39px;
+    top: 47px;
     margin: -23.5px 10px;
     margin-left: 1px;
     border-radius: 50%;
