--- a/css/equity.css
+++ b/css/equity.css
@@ -44,21 +44,21 @@
 .sessionEqu_demand {
   width: 205px;
   color: white;
-  font-size: 16px;
+  font-size: calc(1rem);
 }
 .sessionEqu_unit {
   width: 150px;
   color: white;
-  font-size: 16px;
+  font-size: calc(1rem);
 }
 .sessionEqu_trip {
   width: 165px;
   color: white;
-  font-size: 16px;
+  font-size: calc(1rem);
 }
 .sessionEqu_meas {
   color: white;
-  font-size: 16px;
+  font-size: calc(1rem);
 }
 .sliderContainerEqu {
   color: white;
@@ -68,14 +68,14 @@
 .sliderEquContentAbsolute {
   position: absolute;
   width: 230px;
-  font-size: 16px;
+  font-size: calc(1rem);
   font-weight: 300;
   color: white;
 }
 .sliderEquContentRelative {
   position: absolute;
   width: 230px;
-  font-size: 16px;
+  font-size: calc(1rem);
   font-weight: 300;
   color: white;
 }
@@ -158,7 +158,7 @@
 }
 #gapTitle {
   align-items: center;
-  font-size: 20px;
+  font-size: calc(1rem + 0.2vw);
   font-weight: 300;
   color: white;
   text-align: center;
@@ -168,7 +168,7 @@
   align-items: center;
   padding-left: 15px;
   padding-right: 15px;
-  font-size: 15px;
+  font-size: calc(1rem);
   font-weight: 500;
   color: white;
   height: 20%;
@@ -180,7 +180,7 @@
   align-items: center;
   padding-left: 15px;
   padding-right: 15px;
-  font-size: 30px;
+  font-size: calc(2rem);
   font-weight: 600;
   color: white;
   height: 40%;
@@ -190,7 +190,7 @@
 }
 #giniTitle {
   align-items: center;
-  font-size: 20px;
+  font-size: calc(1rem + 0.2vw);
   font-weight: 300;
   color: white;
   text-align: center;
@@ -201,7 +201,7 @@
   align-items: center;
   padding-left: 15px;
   padding-right: 15px;
-  font-size: 15px;
+  font-size: calc(1rem);
   font-weight: 500;
   color: white;
   height: 15%;
@@ -222,7 +222,7 @@
 #giniValue {
   padding-left: 10px;
   padding-right: 10px;
-  font-size: 30px;
+  font-size: calc(2rem);
   font-weight: 600;
   color: white;
   display: flex;
@@ -286,7 +286,7 @@
   top: 10px;
   right: 20px;
   transition: all 200ms;
-  font-size: 30px;
+  font-size: calc(2rem);
   font-weight: bold;
   text-decoration: none;
   color: white;
@@ -300,7 +300,7 @@
   margin-bottom: 10px;
   overflow: auto;
   line-height: 1.5;
-  font-size: 16px;
+  font-size: calc(1rem);
   text-align: left;
 }
 
@@ -308,7 +308,7 @@
   position: relative;
   width: 100%;
   top: -60px;
-  font-size: 16px;
+  font-size: calc(1rem);
   font-family: "hepta Slab";
   color: white !important;
   overflow: visible;
