--- a/css/page.css
+++ b/css/page.css
@@ -335,7 +335,7 @@ h5 {
     top: 80px;
     height: 50px;
     color: white;
-    font-size: 22px;
+    font-size: calc(1rem + 0.5vw);
     font-weight: 700;
     text-shadow: 2px 2px 4px #000000;
     z-index: 1;
@@ -348,7 +348,7 @@ h5 {
     top: 80px;
     height: 50px;
     color: white;
-    font-size: 22px;
+    font-size: calc(1rem + 0.5vw);
     font-weight: 700;
     text-shadow: 2px 2px 4px #000000;
     z-index: 1;
@@ -377,14 +377,14 @@ label {
     position: relative;
     cursor: pointer;
     padding-right: 18px;
-    font-size: 14px;
+    font-size: calc(1rem - 0.1vw);
     font-weight: 300;
     margin-bottom: 7px;
 }
 label-drop {
     position: relative;
     left: -30px;
-    font-size: 14px;
+    font-size: calc(1rem - 0.1vw);
     font-weight: 300;
 }
 label:nth-child(1) {
@@ -476,12 +476,12 @@ input[type="radio"]:checked + label::after {
     position: absolute;
     width: 100%;
     padding-top: 0rem;
-    font-size: 16px;
+    font-size: calc(1rem);
     font-family: "hepta Slab";
     color: white !important;
 }
 .cmath {
-    font-size: 11px;
+    font-size: calc(1rem - 0.3vw);
 }
 #plotSvgInequity {
     position: absolute;
