--- a/css/accessibility.css
+++ b/css/accessibility.css
@@ -31,13 +31,13 @@
   #acc-wrapper {
     background: rgba(0,0,0,0.5);
     position: absolute;
-    height: 225px;
+    height: 24vh;
+    width: 22vw;
     left: 31%;
     transform: translateX(50%);
     top: 170px;
     bottom: 60%;
     padding: 6px;
-    width: 380px;
     z-index: 3;
     border-radius: 20px;
     display: flex;
@@ -51,12 +51,12 @@
   }
   #overallTitle {
     align-items: center;
-    font-size: 30px;
+    font-size: 2.8vmin;
     font-weight: 600;
     color: white;
     text-align: center;
-    margin-top: -20px;
-    margin-bottom: -10px;
+    margin-top: -1vw;
+    margin-bottom: -1vw;
   }
   #overallSmallText{
     align-items: center;
@@ -64,7 +64,7 @@
     padding-right: 15px;
     padding-bottom: 10px;
     padding-top: 4px;
-    font-size: 20px;
+    font-size: 2.0vmin;
     font-weight: 500;
     color: white;
     height: 5px;
@@ -76,26 +76,27 @@
     align-items: center;
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 35px;
-    padding-bottom: 25px;
-    font-size: 56px;
+    padding-top: 2vh;
+    padding-bottom: 1vh;
+    font-size: 5.2vmin;
     font-weight: 600;
     color: white;
-    height: 40px;
+    height: 6vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
   }
   .overallDescript {
     align-items: center;
-    font-size: calc(1rem);
-    margin-left: 4px;
-    margin-right: 4px;
+    font-size: 1.6vmin;
+    margin-left: 0.4vw;
+    margin-right: 0.4vw;
     font-weight: 200;
     color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 10vmin;
   }
 
 
@@ -113,21 +114,22 @@
   }
 
   .sessionAcc_trip {
-    width: 165px;
+    width: 24vw;
     color: white;
     font-size: calc(1rem);
   }
   .sessionAcc_meas {
     color: white;
+    width: 24vw;
     font-size: calc(1rem);
   }
 
 .legend-box{
   position: absolute;
-  left: 20px;
-  bottom: 4.5vh;
-  width: 330px;
-  height: 280px;
+  left: 1vw;
+  bottom: 6vh;
+  width: 16vw;
+  height: 28vh;
   color: white;
   font-weight: 500;
   background-color: black;
@@ -136,10 +138,10 @@
 }
 .legend-wrapper{
     position: absolute;
-    left: 20px;
-    bottom: 10vh;
-    width: 330px;
-    height: 240px;
+    left: 1vw;
+    bottom: 6vh;
+    width: 16vw;
+    height: 28vh;
     color: white;
     font-weight: 500;
     border-radius: 10px;
@@ -147,30 +149,31 @@
 .legendTitle{
   position: relative;
   padding-top: 0px;
-  padding-bottom: 3px;
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: calc(1rem - 0.05vw);
+  padding-bottom: 0.8vh;
+  padding-left: 0.5vw;
+  padding-right: 0.5vw;
+  font-size: 1.6vmin;
   text-align: left;
 }
 .legendBoxes{
   position: absolute;
-  padding-left: 10px;
+  padding-left: 0.5vw;
+  margin-top: -1.6vh;
 }
 .legendBox{
-  margin-top: 5px;
-  width: 16px;
-  height: 16px;
+  position: relative;
+  margin-top: 5.2px;
+  width: min(1.6vh, 1.6vw);
+  height: min(1.6vh, 1.6vw);
   border-radius: 4px;
   background-color: black;
 }
 .legendText{
   position:absolute;
   line-height: 7px;
-  font-size: calc(1rem - 0.1vw);
-  top: 90px;
-  margin-top: -5px;
-  margin-left: 40px;
+  font-size: 1.4vmin;
+  margin-top: -2vh;
+  margin-left: 2.2vw;
   color: white;
   font-weight: 500;
   text-align: left;
@@ -179,19 +182,19 @@
 
 .sliderContainer {
   color: white;
-  margin-top: 10px;
+  margin-top: 4vh;
 }
 .sliderAccContentAbsolute {
   position: absolute;
-  width: 270px;
-  font-size: calc(1rem);
+  width: 14vw;
+  font-size: 1.6vmin;
   font-weight: 300;
   color: white;
 }
 .sliderAccContentRelative {
   position: absolute;
-  width: 270px;
-  font-size: calc(1rem);
+  width: 14vw;
+  font-size: 1.6vmin;
   font-weight: 300;
   color: white;
 }
@@ -199,7 +202,7 @@
   -webkit-appearance: none;
   appearance: none;
   width: 100%;
-  height: 7px;
+  height: 1vh;
   border-radius: 5px;
   background: #9c9c9c;
   outline: none;
@@ -211,9 +214,16 @@
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none; /* Override default look */
   appearance: none;
-  width: 20px; /* Set a specific slider handle width */
-  height: 20px; /* Slider handle height */
+  width: min(1.8vh, 1.8vw); /* Set a specific slider handle width */
+  height: min(1.8vh, 1.8vw); /* Slider handle height */
   border-radius: 50%;
   background: #ffffff; /* Green background */
   cursor: pointer; /* Cursor on hover */
+}
+
+@media screen and (max-width: 1070px) {
+  #filter-wrapper-Acc {
+    display: none;
+  }
+
 }
