--- a/css/equity.css
+++ b/css/equity.css
@@ -42,40 +42,41 @@
 }
 
 .sessionEqu_demand {
-  width: 205px;
+  width: 24vw;
   color: white;
   font-size: calc(1rem);
 }
 .sessionEqu_unit {
-  width: 150px;
+  width: 24vw;
   color: white;
   font-size: calc(1rem);
 }
 .sessionEqu_trip {
-  width: 165px;
+  width: 24vw;
   color: white;
   font-size: calc(1rem);
 }
 .sessionEqu_meas {
+  width: 24vw;
   color: white;
   font-size: calc(1rem);
 }
 .sliderContainerEqu {
   color: white;
-  margin-top: 4px;
+  margin-top: 2vh;
 }
 
 .sliderEquContentAbsolute {
   position: absolute;
-  width: 230px;
-  font-size: calc(1rem);
+  width: 14vw;
+  font-size: 1.6vmin;
   font-weight: 300;
   color: white;
 }
 .sliderEquContentRelative {
   position: absolute;
-  width: 230px;
-  font-size: calc(1rem);
+  width: 14vw;
+  font-size: 1.6vmin;
   font-weight: 300;
   color: white;
 }
@@ -83,7 +84,7 @@
   -webkit-appearance: none;
   appearance: none;
   width: 100%;
-  height: 7px;
+  height: 1vh;
   border-radius: 5px;
   background: #9c9c9c;
   outline: none;
@@ -95,8 +96,8 @@
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none; /* Override default look */
   appearance: none;
-  width: 20px; /* Set a specific slider handle width */
-  height: 20px; /* Slider handle height */
+  width: min(1.8vh, 1.8vw); /* Set a specific slider handle width */
+  height: min(1.8vh, 1.8vw); /* Slider handle height */
   border-radius: 50%;
   background: #ffffff; /* Green background */
   cursor: pointer; /* Cursor on hover */
@@ -104,12 +105,11 @@
 
 #legend-wrapper {
   position: absolute;
-  height: 40%;
-  width: 230px;
-  bottom: 10px;
-  left: 10px;
-  font-weight: 500;
-  padding: 10px;
+  height: 480px;
+  width: 180px;
+  bottom: 2px;
+  left: 12px;
+  padding: 1vmin;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -117,58 +117,60 @@
 }
 .legendInfo {
   position: absolute;
-  bottom: 25px;
-  right: 10px;
+  bottom: 210px;
+  left: 180px;
   z-index: 30;
 }
 
 #plot-wrapper {
   background: rgba(0,0,0,0.5);
   position: absolute;
-  left: 33%;
+  left: 30%;
   transform: translateX(50%);
-  top: 135px;
-  bottom: 4%;
-  padding: 6px;
-  width: 360px;
+  top: 15vh;
+  height: 78vh;
+  padding: 0.6vmin;
+  width: 24vw;
   z-index: 3;
-  border-radius: 20px;
+  border-radius: 16px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 #gapSummary {
-  height: 12%;
+  height: 10%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 #scatterPlot {
-  height: 32%;
+  margin-top: 3%;
+  height: 36%;
 }
 #giniSummary {
-  height: 20%;
-  margin-top: 30px;
+  padding-top: 0.2vh;
+  height: 18%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 #lorenzCurve {
+  margin-top: 3%;
   height: 34%;
 }
 #gapTitle {
   align-items: center;
-  font-size: calc(1rem + 0.2vw);
+  font-size: 2vmin;
   font-weight: 300;
   color: white;
   text-align: center;
-  margin-bottom: -20px;
+  margin-bottom: -4%;
 }
 #gapSmallText {
   align-items: center;
-  padding-left: 15px;
-  padding-right: 15px;
-  font-size: calc(1rem);
+  padding-left: 0.6vw;
+  padding-right: 0.6vw;
+  font-size: 1.6vmin;
   font-weight: 500;
   color: white;
   height: 20%;
@@ -178,9 +180,9 @@
 }
 #gapValue {
   align-items: center;
-  padding-left: 15px;
-  padding-right: 15px;
-  font-size: calc(2rem);
+  padding-left: 0.6vw;
+  padding-right: 0.6vw;
+  font-size: 3vmin;
   font-weight: 600;
   color: white;
   height: 40%;
@@ -190,18 +192,18 @@
 }
 #giniTitle {
   align-items: center;
-  font-size: calc(1rem + 0.2vw);
+  font-size: 2vmin;
   font-weight: 300;
   color: white;
   text-align: center;
-  margin-top: 0px;
-  margin-bottom: -20px;
+  margin-top: 6%;
+  margin-bottom: -4%;
 }
 #giniSmallText {
   align-items: center;
-  padding-left: 15px;
-  padding-right: 15px;
-  font-size: calc(1rem);
+  padding-left: 0.6vw;
+  padding-right: 0.6vw;
+  font-size: 1.6vmin;
   font-weight: 500;
   color: white;
   height: 15%;
@@ -214,15 +216,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 30px;
-  margin-top: 5px;
+  margin-left: 0.2vw;
+  margin-right: 0.2vw;
+  margin-bottom: 4vh;
+  margin-top: 0.8vh;
 }
 #giniValue {
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: calc(2rem);
+  padding-left: 0.6vw;
+  padding-right: 0.6vw;
+  font-size: 3vmin;
   font-weight: 600;
   color: white;
   display: flex;
@@ -283,10 +285,10 @@
 }
 .popup .close {
   position: absolute;
-  top: 10px;
-  right: 20px;
+  top: 1vh;
+  right: 1vw;
   transition: all 200ms;
-  font-size: calc(2rem);
+  font-size: 3.6vmin;
   font-weight: bold;
   text-decoration: none;
   color: white;
@@ -295,21 +297,38 @@
   color: #ffd752;
 }
 .popup .content {
-  margin-top: -35px;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  margin-top: -12vh;
+  margin-right: 0.6vw;
+  margin-bottom: 0.6vw;
   overflow: auto;
   line-height: 1.5;
-  font-size: calc(1rem);
+  font-size: 1.8vmin;
   text-align: left;
 }
 
 .popup .title {
   position: relative;
   width: 100%;
-  top: -60px;
-  font-size: calc(1rem);
+  top: -14vh;
+  font-size: 2.2vmin;
   font-family: "hepta Slab";
   color: white !important;
   overflow: visible;
+}
+
+@media screen and (max-width: 1070px) {
+  #filter-wrapper-Equ {
+    display: none;
+  }
+
+}
+
+@media screen and (max-height: 740px) {
+  #legend-wrapper {
+    display: none;
+  }
+  .legendInfo {
+    display: none;
+  }
+
 }
