--- a/css/page.css
+++ b/css/page.css
@@ -29,6 +29,8 @@ a:hover, a:active {
 #logoCSPAV {
     -webkit-filter: none !important;
     filter: none !important;
+    width: 32vmin;
+    height: 6vmin;
 }
 
 a img {
@@ -66,7 +68,7 @@ h2 {
 	width: 40%;
     line-height: 1.5em;
 	left: 0;
-	font-size: calc(1rem + 0.3vw);
+	font-size: 2vmin;
     font-weight: 300;
 }
 
@@ -81,7 +83,7 @@ h3 {
     text-align: justify;
     line-height: 1.5em;
 	left: 0;
-	font-size: calc(1rem + 0.2vw);
+	font-size: calc(1rem);
     font-weight: 300;
 }
 
@@ -185,8 +187,9 @@ h5 {
     position: absolute;
     display: flex;
     top: 25%;
-    font-size: calc(1rem + 1.8vw);
+    font-size: 4.8vmin;
     font-weight: 700;
+    width: 80%;
 }
 .mast-subtitle {
     letter-spacing: 0.2rem;
@@ -196,7 +199,7 @@ h5 {
     top: 35%;
 	color: white;
     line-height: 1.5em;
-	font-size: calc(1rem + 1.5vw);
+	font-size: 4.2vmin;
     font-weight: 700;
     width: 80%;
 }
@@ -206,6 +209,8 @@ h5 {
     display: flex;
     top: 55%;
     width: 40%;
+    font-size: 2vmin;
+    font-weight: 300;
 }
 .logo-wrapper {
     position: absolute;
@@ -216,85 +221,6 @@ h5 {
     display: flex;
     right: 40px;
 }
-/* .focus {
-    position: relative;
-    float: left;
-    font-family: "hepta Slab";
-    top: 253px;
-    left: 610px;
-    font-size: 3.4rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: white;
-    letter-spacing: 0.4rem;
-    line-height: 1;
-    width: 260px;
-}
-.focus:before {
-    content: "Justice";
-    filter: blur(4px);
-}
-.focus:after {
-    content: "";
-    color: #B2A268;
-    position: absolute;
-    width: 50px;
-    height: calc(100% + 8px);
-    top: -7px;
-    left: 0;
-    border-top: 2px solid;
-    border-bottom: 2px solid;
-    -webkit-animation: mask-move 2s linear infinite alternate;
-    animation: mask-move 2s linear infinite alternate;
-}
-.focus--mask {
-    overflow: hidden;
-    color: #B2A268;
-    position: absolute;
-    width: 50px;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: null;
-    -webkit-animation: mask-move 2s linear infinite alternate;
-    animation: mask-move 2s linear infinite alternate;
-}
-.focus--mask-inner {
-    -webkit-animation: mask-inner-move 2s linear infinite alternate;
-    animation: mask-inner-move 2s linear infinite alternate;
-}
-@-webkit-keyframes mask-move {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(259px);
-    }
-    }
-    @keyframes mask-move {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(259px);
-    }
-    }
-    @-webkit-keyframes mask-inner-move {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-259px);
-    }
-    }
-    @keyframes mask-inner-move {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-259px);
-    }
-} */
 
 #vis {
     display: inline-block;
@@ -335,7 +261,7 @@ h5 {
     top: 80px;
     height: 50px;
     color: white;
-    font-size: calc(1rem + 0.5vw);
+    font-size: 2.6vmin;
     font-weight: 700;
     text-shadow: 2px 2px 4px #000000;
     z-index: 1;
@@ -348,7 +274,7 @@ h5 {
     top: 80px;
     height: 50px;
     color: white;
-    font-size: calc(1rem + 0.5vw);
+    font-size: 2.6vmin;;
     font-weight: 700;
     text-shadow: 2px 2px 4px #000000;
     z-index: 1;
@@ -368,6 +294,7 @@ h5 {
     align-items: flex-start;
     display: flex;
     margin-bottom: -10px;
+    font-size: 1.8vmin;
 }
 
 input[type="radio"] {
@@ -377,14 +304,14 @@ label {
     position: relative;
     cursor: pointer;
     padding-right: 18px;
-    font-size: calc(1rem - 0.1vw);
+    font-size: 1.6vmin;
     font-weight: 300;
     margin-bottom: 7px;
 }
 label-drop {
     position: relative;
     left: -30px;
-    font-size: calc(1rem - 0.1vw);
+    font-size: 1.6vmin;
     font-weight: 300;
 }
 label:nth-child(1) {
@@ -392,33 +319,29 @@ label:nth-child(1) {
 }
 label::before {
     content: "";
-    border: 1.5px solid white;
+    border: 1px solid white;
     display: inline-block;
-    width: 10px;    
-    height: 10px;
-    margin: -2px 10px -1px 0px;
+    width: min(1vw, 1vh);
+    height: min(1vw, 1vh);
+    margin: 0px 1vmin 0px 0px;
     border-radius: 50%;
 }
 label#filter_rel::before {
     content: "";
-    border: 1.5px solid white;
+    border: 1px solid white;
     display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin: 5px 10px;
-    margin-left: 1px;
+    width: min(1vw, 1vh);
+    height: min(1vw, 1vh);
     border-radius: 50%;
 }
 label::after {
     content: "";
     display: inline-block;
     position: absolute;
-    width: 9px;
-    height: 9px;
-    left: 2px;
-    top: 6px;
-    margin: -2px 10px;
-    margin-left: 0;
+    width: min(0.8vw, 0.8vh);
+    height: min(0.8vw, 0.8vh);
+    left: 0.1vw;
+    top: 0.6vh;
     border-radius: 50%;
     transition: all 0.4s;
 }
@@ -426,12 +349,10 @@ label#filter_rel::after {
     content: "";
     display: inline-block;
     position: absolute;
-    width: 9px;
-    height: 9px;
-    left: 2.2px;
-    top: 47px;
-    margin: -23.5px 10px;
-    margin-left: 1px;
+    width: min(0.8vw, 0.8vh);
+    height: min(0.8vw, 0.8vh);
+    left: 0.1vw;
+    top: 2.8vh;
     border-radius: 50%;
     transition: all 0.4s;
 }
@@ -472,45 +393,37 @@ input[type="radio"]:checked + label::after {
     top:  30rem;
     font-family: "hepta Slab";
 }
-.popup .title {
-    position: absolute;
-    width: 100%;
-    padding-top: 0rem;
-    font-size: calc(1rem);
-    font-family: "hepta Slab";
-    color: white !important;
-}
 .cmath {
     font-size: calc(1rem - 0.3vw);
 }
 #plotSvgInequity {
     position: absolute;
-    top: 180px;
-    right: 139px;
+    top: 20vh;
+    right: 10vw;
 }
 #plotSvgInequality {
     position: absolute;
-    top: 180px;
-    right: 139px;
+    top: 20vh;
+    right: 10vw;
 }
 #odmtsfig {
-    position: absolute;
+    position: relative;
     top: 0px;
-    right: -400px;
+    right: 10%;
 }
 #accfig {
-    position: absolute;
+    position: relative;
     top: 0px;
-    right: -400px;
+    right: 10%;
 }
 .fraction{
-    top: 5px;
-    left: -23px;
+    top: 1.7vh;
+    left: -1.4vw;
     display: inline-block;
     text-align: center;
     position:relative;
-    padding: 0 1.3em;
-    margin-top: -20px;
+    padding: 0 1vw;
+    margin-top: -3vh; 
 }
 .fraction > .num {
     border-bottom: 2px solid #808080;
