--- a/lib/nice_select2/css/nice-select2.css
+++ b/lib/nice_select2/css/nice-select2.css
@@ -11,15 +11,15 @@
   display: block;
   float: left;
   font-family: 'Source Sans Pro';
-  font-size: 14px;
+  font-size: 1.6vmin;
   font-weight: 300;
-  height: 28px;
+  height: 3vh;
   margin-left: 0px;
-  margin-right: 10px;
-  line-height: 25px;
+  margin-right: 0.6vw;
+  line-height: 2.8vh;
   outline: none;
-  padding-left: 15px;
-  padding-right: 30px;
+  padding-left: 0.6vw;
+  padding-right: 1.6vw;
   position: relative;
   text-align: left !important;
   -webkit-transition: all 0.2s ease-in-out;
@@ -77,7 +77,7 @@
       left: auto;
       right: 0; }
   .nice-select.small {
-    font-size: 12px;
+    font-size: 1.4vmin;
     height: 36px;
     line-height: 34px; }
     .nice-select.small:after {
@@ -155,7 +155,7 @@
     border-radius: 3px;
     display: inline-block;
     line-height: 24px;
-    font-size: 14px;
+    font-size: 1.6vmin;
     margin-bottom: 3px;
     margin-right: 3px; }
   .nice-select .has-multiple .multiple-options {
@@ -187,4 +187,4 @@
   line-height: 22px;
   height: auto;
   outline: 0 !important;
-  font-size: 14px; }
+  font-size: 1.6vmin; }
