--- a/css/equity.css
+++ b/css/equity.css
@@ -5,14 +5,14 @@
   background: #080C16;
   z-index: 10;
   width: 100%;
-  height: calc(100vh - 30px);
+  height: calc(100vh - 10px);
 }
 #mapBefEqu {
     position: absolute; 
     top: 0px;
     bottom: 0px;
     left: 0px;
-    width: calc(50vw - 11px);
+    width: calc(57.5vw);
     height: 100%;
     z-index: 0;
     cursor: pointer;
@@ -22,7 +22,7 @@
   top: 0px;
   bottom: 0px;
   right: 0px;
-  width: calc(50vw - 11px);
+  width: calc(42.5vw);
   height: 100%;
   z-index: 0;
   cursor: pointer;
@@ -125,7 +125,7 @@
 #plot-wrapper {
   background: rgba(0,0,0,0.5);
   position: absolute;
-  left: 30%;
+  right: 42.5%;
   transform: translateX(50%);
   top: 15vh;
   bottom: 6vh;
