--- a/css/accessibility.css
+++ b/css/accessibility.css
@@ -187,7 +187,7 @@
 .sliderAccContentAbsolute {
   position: absolute;
   width: 14vw;
-  font-size: 1.6vmin;
+  font-size: calc(0.5vw + 8px);
   font-weight: 300;
   color: white;
 }
