--- a/css/page.css
+++ b/css/page.css
@@ -106,6 +106,34 @@ h5 {
     font-weight: 200;
     text-align:justify;
 }
+h7 {
+    position: fixed;
+    width: 80%;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+	color: rgba(255, 255, 255, 1) !important;
+    text-align:center;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+#warning {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(8 ,12, 22, .85);
+    z-index: 100;
+}
+
+.material-icons {
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    z-index: 100;
+}
 
 #wrapper-end {
     width: 100%;
@@ -196,7 +224,7 @@ h5 {
     text-align: start;
     position: absolute;
     display: flex;
-    top: 35%;
+    top: 36%;
 	color: white;
     line-height: 1.5em;
 	font-size: 4.2vmin;
@@ -208,7 +236,7 @@ h5 {
     position: absolute;
     display: flex;
     top: 55%;
-    width: 40%;
+    width: 65%;
     font-size: 2vmin;
     font-weight: 300;
 }
@@ -468,3 +496,9 @@ input[type="radio"]:checked + label::after {
     width: 45%;
     height: 80vh;
 }
+
+@media screen and (min-width: 768px) {
+    #warning {
+      display: none;
+    }
+};
