--- a/css/page.css
+++ b/css/page.css
@@ -108,19 +108,16 @@ h5 {
 }
 h7 {
     position: fixed;
-    width: 80%;
     top: 50%;
     left: 50%;
     transform: translateX(-50%);
 	color: rgba(255, 255, 255, 1) !important;
     text-align:center;
-    font-size: 30px;
+    font-size: 4vmin;
     font-weight: 700;
 }
 
 #warning {
-    display: flex;
-    align-items: center;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -128,14 +125,14 @@ h7 {
     z-index: 100;
 }
 
-/* .material-icons {
+.material-icons {
     position: fixed;
     top: 30%;
     left: 50%;
     transform: translateX(-50%);
     color: white;
     z-index: 100;
-} */
+}
 
 #wrapper-end {
     width: 100%;
