--- a/css/page.css
+++ b/css/page.css
@@ -7,7 +7,7 @@
     width: 100%;
     overflow: hidden;
     background-color: #333;
-    position: fixed;
+    position: absolute;
     z-index: 99;
 }
 .loader > div {
